# mcp2cli-rs

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  create-release.yml  release.yml
scripts/: install.sh
skills/: SKILL.md
src/: error.rs  lib.rs  main.rs
src/bake/: config.rs  handler.rs  install.rs  mod.rs
src/cache/: file_cache.rs
src/cli/: args.rs  dynamic.rs  mod.rs  stdin.rs
src/core/: coerce.rs  filter.rs  helpers.rs  mod.rs  types.rs
src/graphql/: commands.rs  document.rs  executor.rs  handler.rs  introspection.rs  mod.rs  selection.rs  types.rs
src/mcp/: client.rs  client_http.rs  client_sse.rs  client_stdio.rs  commands.rs  handler.rs  mod.rs  protocol.rs
src/oauth/: client_creds.rs  mod.rs  pkce.rs  provider.rs  storage.rs
src/openapi/: commands.rs  executor.rs  handler.rs  mod.rs  refs.rs  spec.rs
src/output/: format.rs  jq.rs  mod.rs  toon.rs  types.rs
src/session/: client.rs  daemon.rs  manager.rs  mod.rs
tests/: bake_tests.rs  cli_smoke_tests.rs  graphql_tests.rs  mcp_tests.rs  oauth_tests.rs  openapi_tests.rs
tests/fixtures/: petstore.json  petstore.yaml  petstore_refs.json
