[package]
name = "mcp2cli"
version = "0.1.6"
edition = "2021"
description = "Universal CLI adapter for MCP, OpenAPI, and GraphQL services"
license = "MIT"
rust-version = "1.80"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "signal", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI parsing
clap = { version = "4", features = ["derive", "string"] }

# URL handling
url = "2"
urlencoding = "2"

# UUID for JSON-RPC request IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing (cache keys)
sha2 = "0.10"

# Glob matching (bake filters)
glob-match = "0.2"

# OAuth
oauth2 = "4"

# Local HTTP server (OAuth callback)
axum = "0.7"

# Regex (camelCase -> kebab-case)
regex = "1"

# XDG directories
dirs = "6"

# SSE parsing
eventsource-stream = "0.2"
futures-util = "0.3"

# Hex encoding for hashes
hex = "0.4"

# Async trait support
async-trait = "0.1"

# PKCE code verifier generation
rand = "0.8"
base64 = "0.22"

# Binary path resolution (for bake install)
which = "7"

# Shell-style splitting of stdio command strings
shlex = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
